--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,9 @@ packages = [{include = "ivs_calibration", from = "src"}]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "pytest (>=9.0.1,<10.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)"
+]
